tests/machine/x/c/dataset_where_filter.error
line: 0
error: output mismatch
-- got --
--- Adults ---
Alice is 6.953067704028218e-310 
Charlie is 6.953067704028218e-310  (senior)
Diana is 6.953067704028218e-310
-- want --
--- Adults ---
Alice is 30
Charlie is 65  (senior)
Diana is 45
   1: #include <stdio.h>
